# dindex

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.docker.toml  docker-compose.yml  pdf-support-plan.md  test_dump.xml
.cargo/: config.toml
DIndexClient/: Package.swift
DIndexClient/Sources/DIndexClient/: Configuration.swift  DIndexClient.swift
DIndexClient/Sources/DIndexClient/Models/: Chunk.swift  DIndexError.swift  Document.swift  IndexStats.swift  ScrapeTypes.swift  SearchRequest.swift  SearchResult.swift
DIndexClient/Sources/DIndexClient/Transport/: HTTPTransport.swift  Transport.swift  UnixSocketTransport.swift
DIndexClient/Tests/DIndexClientTests/: DIndexClientTests.swift
deploy/: dindex.service
docs/: API.md  CONFIGURATION.md  DOCKER.md  SWIFT_CLIENT.md  USAGE.md  cache-layer.md  doc-identity-dedupe-plan.md  dump-import-architecture.md  embedding-update.md  plan.md  scraping-addon-architecture.md  single-daemon-update.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dindex-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
src/: config.rs  lib.rs  main.rs  types.rs  util.rs
src/chunking/: mod.rs  splitter.rs  tokenizer.rs
src/chunking/tokenizer/: bpe.rs  factory.rs  heuristic.rs  mod.rs
src/client/: connection.rs  mod.rs
src/commands/: daemon.rs  dev.rs  export.rs  import.rs  index.rs  init.rs  mod.rs  model.rs  scrape.rs  search.rs  stats.rs
src/config/: daemon.rs  embedding.rs  index.rs  logging.rs  mod.rs  network.rs  node.rs  scraping.rs
src/content/: html.rs  mod.rs  pdf.rs  text.rs
src/daemon/: handler.rs  index_manager.rs  jobs.rs  lifecycle.rs  metrics.rs  mod.rs  protocol.rs  recovery.rs  scrape_events.rs  server.rs  write_pipeline.rs
src/daemon/http/: auth.rs  handlers.rs  mod.rs  routes.rs  server.rs  types.rs
src/daemon/http/handlers/: cluster.rs  index.rs  jobs.rs  mod.rs  search.rs  system.rs
src/daemon/jobs/: import.rs  mod.rs  scrape.rs
src/embedding/: engine.rs  mod.rs  model.rs  quantize.rs  service.rs
src/embedding/backend/: factory.rs  http.rs  local.rs  mod.rs  traits.rs
src/import/: coordinator.rs  mod.rs  progress.rs  source.rs  wikimedia.rs  wikitext.rs
src/index/: hnsw.rs  mod.rs  processor.rs  registry.rs  stack.rs  storage.rs
src/network/: behaviour.rs  handle.rs  messages.rs  mod.rs  node.rs  protocol.rs
src/query/: coordinator.rs  executor.rs  mod.rs
src/retrieval/: bm25.rs  fusion.rs  hybrid.rs  mod.rs  reranker.rs  scoring.rs  snippet.rs
src/routing/: bloom.rs  centroids.rs  lsh.rs  mod.rs  router.rs
src/scraping/: coordinator.rs  dedup.rs  domain_assignment.rs  extractor.rs  fetcher.rs  frontier.rs  mod.rs  politeness.rs  trap_detection.rs
src/scraping/coordinator/: mod.rs  pipeline.rs  types.rs  url_filter.rs
src/scraping/extractor/: metadata.rs  mod.rs  scoring.rs  text.rs  types.rs
tests/: integration_test.rs  p2p_cluster.rs
tests/p2p/: docker-compose.yml  run.sh
tests/p2p/configs/: node-1.toml  node-2.toml  node-3.toml  node-4.toml  node-5.toml
