[package]
name = "dindex"
version = "0.1.0"
edition = "2021"
description = "Decentralized semantic search index for LLM consumption"
license = "MIT"
authors = ["DIndex Contributors"]

[features]
default = []
onnx = ["ort"]

[dependencies]
# P2P Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "yamux",
    "quic",
    "kad",
    "gossipsub",
    "identify",
    "autonat",
    "relay",
    "dns",
    "tcp",
    "macros",
    "ping",
    "mdns",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Vector index
usearch = "2"

# Embedding inference (optional - requires ONNX Runtime)
ort = { version = "2.0.0-rc.11", optional = true }
ndarray = "0.16"
tokenizers = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
flatbuffers = "24"

# Text processing / BM25
tantivy = "0.22"
unicode-segmentation = "1.10"

# Hashing / LSH
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = "0.8"
rand_chacha = "0.3"

# Utilities
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6"
bytes = "1"
hex = "0.4"
base64 = "0.22"
tempfile = "3"
directories = "5"
sha2 = "0.10"

# HTTP client (for downloading models and scraping)
reqwest = { version = "0.12", features = ["stream", "json", "gzip", "brotli"] }
indicatif = "0.17"

# File system / Config
walkdir = "2"
toml = "0.8"

# Scraping dependencies
url = "2"
scraper = "0.21"
robotstxt = "0.3"
lru = "0.12"
blake3 = "1"

# Bulk import dependencies
bzip2 = "0.5"
flate2 = "1.0"
quick-xml = "0.37"

# PDF extraction
pdf-extract = "0.7"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bin]]
name = "dindex"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
