[package]
name = "dindex"
version = "0.1.0"
edition = "2021"
description = "Decentralized semantic search index for LLM consumption"
license = "MIT"
authors = ["DIndex Contributors"]

[features]
default = []
cuda = ["embed_anything/cuda"]
metal = ["embed_anything/metal"]
onnx = ["dep:ort", "dep:tokenizers"]

[dependencies]
# P2P Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "yamux",
    "quic",
    "kad",
    "gossipsub",
    "identify",
    "autonat",
    "relay",
    "dns",
    "tcp",
    "macros",
    "ping",
    "mdns",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Vector index
usearch = "2"

# Embedding inference
embed_anything = { path = "/home/murr/Code/EmbedAnything/rust" }
ndarray = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
flatbuffers = "24"

# Text processing / BM25
tantivy = "0.22"
unicode-segmentation = "1.10"

# Hashing / LSH
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = "0.8"
rand_chacha = "0.3"

# Utilities
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6"
bytes = "1"
hex = "0.4"
base64 = "0.22"
tempfile = "3"
directories = "5"
sha2 = "0.10"
daemonize = "0.5"
libc = "0.2"

# HTTP client (for downloading models and scraping)
reqwest = { version = "0.12", features = ["stream", "json", "gzip", "brotli"] }
indicatif = "0.17"
console = "0.15"

# File system / Config
walkdir = "2"
toml = "0.8"

# Embedded database for chunk storage
sled = "0.34"

# Scraping dependencies
url = "2"
scraper = "0.21"
robotstxt = "0.3"
lru = "0.12"
blake3 = "1"
readability = "0.3"

# Bulk import dependencies
bzip2 = "0.5"
flate2 = "1.0"
quick-xml = "0.37"

# PDF extraction
pdf-extract = "0.7"

# Optional: ONNX reranking (enable with --features onnx)
# Note: ort version must match embed_anything's requirement (2.0.0-rc.9)
ort = { version = "=2.0.0-rc.10", optional = true }
tokenizers = { version = "0.20", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bin]]
name = "dindex"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[patch.crates-io]
cudarc = { git = "https://github.com/coreylowman/cudarc", branch = "main" }
candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-kernels = { git = "https://github.com/huggingface/candle", branch = "main" }
